<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:layout_marginEnd="16dp"
        tools:src="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextContent.HeadlineMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/dummy_name" />

        <TextView
            android:id="@+id/tv_item_alias"
            style="@style/TextContent.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name"
            tools:text="@string/dummy_alias" />

        <TextView
            android:id="@+id/tv_item_category"
            style="@style/TextContent.BodyMedium.Gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/tv_item_alias"
            tools:text="@string/dummy_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>